--- a/FullStackEletro/cadastro.html
+++ b/FullStackEletro/cadastro.html
@@ -71,7 +71,8 @@
 /* Aqui, crio um objeto da classe XMLHttpRequest para solicitar que os dados
 sejam enviados ao endereço onde serão tratados, através do método POST.  */
 let xhr = new XMLHttpRequest();
-        xhr.open('POST', 'http://localhost:3002', true);
+        xhr.open('POST', 'http://localhost:3002', true); 
+        // o argumento "true" acima indica que a requisição é assíncrona
         xhr.setRequestHeader('Content-Type', 'application/json', 'charset=UTF-8');        
         xhr.send(JSON.stringify(obj));
       }
