--- a/FullStackEletro/cadastro.html
+++ b/FullStackEletro/cadastro.html
@@ -75,6 +75,8 @@ let xhr = new XMLHttpRequest();
         // o argumento "true" acima indica que a requisição é assíncrona
         xhr.setRequestHeader('Content-Type', 'application/json', 'charset=UTF-8');        
         xhr.send(JSON.stringify(obj));
+
+        alert('Cadastro realizado com sucesso!');
       }
 
   </script>
